--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Currency Converter</title>
 
-    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
+    <script type="module" src="script.js" defer></script>
   </head>
   <body>
     <div class="container">
@@ -27,7 +27,7 @@
             <option value="INR">INR</option>
             <option value="JPY">JPY</option>
           </select>
-          <button onclick="handleConversion()">Convert</button>
+          <button class="btn-convert">Convert</button>
         </div>
         <div id="result"></div>
       </div>
