--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Currency Converter</h1>
+      <h1>Currency Converter (HARDCORE)</h1>
       <div class="converter">
         <div class="input-group">
           <input type="number" id="amount" placeholder="Enter amount" />
