--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <option value="INR">INR</option>
             <option value="JPY">JPY</option>
           </select>
-          <span>TO</span>
+          <span class="convert-text">Convert TO</span>
           <select id="toCurrency">
             <option value="USD">USD</option>
             <option value="EUR">EUR</option>
